force-app/main/default/objects/Orders__c/Orders__c.object-meta.xml
<CustomObject>
    <label>Orders</label>
    <nameField>
        <displayFormat>ORN-{0000}</displayFormat>
        <label>Orders ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>