force-app/main/default/objects/Orders__c/fields/Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>