force-app/main/default/objects/Orders__c/fields/Ordered_Units__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Units__c</fullName>
    <label>Ordered Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>