force-app/main/default/objects/Orders__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Available_Units__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.Ordered_Units__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Ready For Sale</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>