force-app/main/default/objects/Orders__c/fields/Status_is_Changed__c.field-meta.xml
<CustomField>
    <fullName>Status_is_Changed__c</fullName>
    <formula>IF( ( TEXT(Status__c ) = &quot;Placed&quot; || TEXT(Status__c ) = &quot;In Transit&quot; || TEXT(Status__c )= &quot;Delivered&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status is Changed</label>
    <type>Checkbox</type>
</CustomField>