force-app/main/default/objects/Orders__c/fields/Subscribed_For_Notification__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_For_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed For Notification</label>
    <type>Checkbox</type>
</CustomField>