force-app/main/default/objects/Orders__c/validationRules/Date_must_not_be_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_must_not_be_Past_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Order_Date__c   &lt;   TODAY()</errorConditionFormula>
    <errorDisplayField>Order_Date__c</errorDisplayField>
    <errorMessage>Enter The Future Date or Today date</errorMessage>
</ValidationRule>