force-app/main/default/objects/Orders__c/validationRules/Order_status_is_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_status_is_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( Status__c ), 
    NOT(
        OR(
            AND(
                TEXT(PRIORVALUE(Status__c)) = &quot;Placed&quot;,
                OR(
                    TEXT(Status__c) = &quot;In-Transit&quot;,
                    TEXT(Status__c) = &quot;Delivered&quot;
                )
            ),
            AND(
                TEXT(PRIORVALUE(Status__c)) = &quot;In-Transit&quot;,
                TEXT(Status__c) = &quot;Delivered&quot;
            )
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed</errorMessage>
</ValidationRule>