force-app/main/default/objects/Orders__c/listViews/All_Order.listView-meta.xml
<ListView>
    <fullName>All_Order</fullName>
    <columns>NAME</columns>
    <columns>Order_Date__c</columns>
    <columns>Ordered_Units__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Subscribed_For_Notification__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Order</label>
</ListView>